@@ -30,10 +30,9 @@
 #import "Support/ccUtils.h"
 #import "Support/CCFileUtils.h"
 
-@interface CCRenderTexture (private)
-
-- (void) saveGLstate;
-- (void) restoreGLstate;
+@interface CCRenderTexture ()
+- (void) saveGLColor;
+- (void) restoreGLColor;
 @end
 
 @implementation CCRenderTexture
@@ -114,60 +113,46 @@
 	[super dealloc];
 }
 
-
 -(void)begin
 {
-	// issue #878 save opengl state
-	[self saveGLstate];
-
-	CC_DISABLE_DEFAULT_GL_STATES();
-	// Save the current matrix
-	glPushMatrix();
-	
-	CGSize texSize = [texture_ contentSizeInPixels];
-
-	// Calculate the adjustment ratios based on the old and new projections
-	CGSize size = [[CCDirector sharedDirector] displaySizeInPixels];
-	float widthRatio = size.width / texSize.width;
-	float heightRatio = size.height / texSize.height;
-
-	// Adjust the orthographic propjection and viewport
-	ccglOrtho((float)-1.0 / widthRatio,  (float)1.0 / widthRatio, (float)-1.0 / heightRatio, (float)1.0 / heightRatio, -1,1);
-	glViewport(0, 0, texSize.width, texSize.height);
-
-	glGetIntegerv(CC_GL_FRAMEBUFFER_BINDING, &oldFBO_);
-	ccglBindFramebuffer(CC_GL_FRAMEBUFFER, fbo_);//Will direct drawing to the frame buffer created above
-	
-	CC_ENABLE_DEFAULT_GL_STATES();	
+	// don't clear the frame buffer
+	[self beginWithClear:-1 g:-1 b:-1 a:-1];
 }
 
 -(void)beginWithClear:(float)r g:(float)g b:(float)b a:(float)a
 {
-	// issue #878 save opengl state
-	[self saveGLstate];
+	if( a != -1 ) {
+		[self saveGLColor];
+		restoreColor_ = YES;
+	} else
+		restoreColor_ = NO;
 	
-	CC_DISABLE_DEFAULT_GL_STATES();
+
 	// Save the current matrix
 	glPushMatrix();
 	
 	CGSize texSize = [texture_ contentSizeInPixels];
-	
+
+
 	// Calculate the adjustment ratios based on the old and new projections
 	CGSize size = [[CCDirector sharedDirector] displaySizeInPixels];
 	float widthRatio = size.width / texSize.width;
 	float heightRatio = size.height / texSize.height;
-	
+
+
 	// Adjust the orthographic propjection and viewport
 	ccglOrtho((float)-1.0 / widthRatio,  (float)1.0 / widthRatio, (float)-1.0 / heightRatio, (float)1.0 / heightRatio, -1,1);
 	glViewport(0, 0, texSize.width, texSize.height);
-	
+
+
 	glGetIntegerv(CC_GL_FRAMEBUFFER_BINDING, &oldFBO_);
 	ccglBindFramebuffer(CC_GL_FRAMEBUFFER, fbo_);//Will direct drawing to the frame buffer created above
-	
-	glClearColor(r, g, b, a);
-	glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
-	
-	CC_ENABLE_DEFAULT_GL_STATES();
+
+
+	if( a != -1 ) {
+		glClearColor(r, g, b, a);
+		glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+	}
 }
 
 -(void)end
@@ -177,25 +162,23 @@
 	glPopMatrix();
 	CGSize size = [[CCDirector sharedDirector] displaySizeInPixels];
 	glViewport(0, 0, size.width, size.height);
-	[self restoreGLstate];
-
+	
+	if( restoreColor_ )
+		[self restoreGLColor];
 }
 
 -(void)clear:(float)r g:(float)g b:(float)b a:(float)a
 {
-	[self begin];
-	glClearColor(r, g, b, a);
-	glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
-
+	[self beginWithClear:r g:g b:b a:a];
 	[self end];
 }
 
--(void) saveGLstate
+-(void) saveGLColor
 {
 	glGetFloatv(GL_COLOR_CLEAR_VALUE,clearColor_); 
 }
 
-- (void) restoreGLstate
+- (void) restoreGLColor
 {
 	glClearColor(clearColor_[0], clearColor_[1], clearColor_[2], clearColor_[3]);
 }
